--- a/csswegogym.css
+++ b/csswegogym.css
@@ -27920,13 +27920,13 @@ body.active-light-mode .popup-mobile-menu .mainmenu li a {
         margin-top: max(38.016px,min(3.0125vw,59.4px));
     }
 
-    .home-bl {
+    .home-wgg {
         grid-column: 3/span 5;
         grid-row: 4/span 2;
         margin-top: max(79.488px,min(5.4625vw,124.2px));
     }
 
-    .home-la {
+    .home-fit {
         grid-column: 8/span 6;
         grid-row: 6/span 2;
         margin-left: max(10.24px,min(1vw,16px));
